# PredictiveControl

./: .gitignore  Cargo.toml  README.md
examples/: double_integrator.rs  double_integrator_solver.rs  inverted_pendulum.rs  mass_spring_damper.rs  options_trade_allocator.rs  reactor.rs  stochastic_double_integrator_mpc.rs
src/: constraints.rs  data.rs  distribution.rs  error.rs  gaussian_process.rs  lib.rs  options.rs  polynomial.rs  problem.rs  simulator.rs  smpc.rs  solver.rs  stochastic.rs  transformation.rs
